--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body{
     display:flex;
     justify-content:center;
     align-items:center;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    background: linear-gradient(135deg, #9d50bb, #ff4b6e);
     font-family: "Tahoma", sans-serif;
 }
 
@@ -29,7 +29,7 @@ body{
 h1{ color:#ff4b6e; }
 
 button{
-    margin-top:20px;
+    margin-top:15px;
     padding:10px 25px;
     border:none;
     border-radius:30px;
@@ -52,7 +52,7 @@ button:hover{ background:#ff1f4a; }
 }
 @keyframes beat{
     0%{transform:scale(1);}
-    50%{transform:scale(1.2);}
+    50%{transform:scale(1.4);}
     100%{transform:scale(1);}
 }
 
@@ -63,6 +63,19 @@ img{
     width:100%;
     border-radius:15px;
     margin-top:15px;
+}
+
+/* ข้อความรักนะ */
+#loveText{
+    font-size:28px;
+    color:#ff4b6e;
+    margin-top:15px;
+    animation: grow 1s infinite alternate;
+}
+
+@keyframes grow{
+    0%{ transform: scale(1); }
+    100%{ transform: scale(1.4); }
 }
 </style>
 </head>
@@ -83,13 +96,11 @@ img{
     <h1>ยิ้มหน่อยน้า 😊</h1>
     <p>อันนี้ให้กำลังใจพิเศษเลย 💕</p>
 
-    <!-- ลิงก์ GIF -->
-    <img src="https://media.tenor.com/Pr1SLLaw6ssAAAAi/p1.gif"
-     alt="GIF สวยๆ"
-     style="width:100%; border-radius:15px;">
+    <img src="https://media.tenor.com/Pr1SLLaw6ssAAAAi/p1.gif">
 
+    <div id="loveText">รักนะ ❤️</div>
 
-    <p style="margin-top:15px;">พี่อยู่ข้างๆ เสมอนะ ❤️</p>
+    <p style="margin-top:10px;">พี่อยู่ข้างๆ เสมอนะ</p>
 </div>
 
 <script>
